Ignoring build files

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ PythonAPI/pycocotools/coco.pyc
 PythonAPI/pycocotools/cocoeval.pyc
 PythonAPI/pycocotools/cocostuffeval.pyc
 PythonAPI/pycocotools/mask.pyc
+PythonAPI/build/
