--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ PythonAPI/pycocotools/_mask.so
 PythonAPI/pycocotools/coco.pyc
 PythonAPI/pycocotools/cocoeval.pyc
 PythonAPI/pycocotools/mask.pyc
+*.pyc
+*.pyd
