--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: minima
+
+gems: ['jekyll-emoji']
+emoji:
+  format: emojione-svg # default html
+  ascii: true # default false
+  shortname: true # default true
+  src: "/assets/imgs/emojis" # defaults to "https://cdn.jsdelivr.net/emojione/assets/#{ext}"
