--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install linting dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 isort yapf
+        pip install flake8 isort==4.3.21 yapf
     - name: Lint with flake8
       run: flake8 --max-complexity 20 .
     - name: Lint with isort
