Added label writing for yolo

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 images/
 annotations/
 results/
+labels
 external/
 .DS_Store
 
@@ -14,3 +15,8 @@ PythonAPI/pycocotools/_mask.so
 PythonAPI/pycocotools/coco.pyc
 PythonAPI/pycocotools/cocoeval.pyc
 PythonAPI/pycocotools/mask.pyc
+PythonAPI/train.pdf
+PythonAPI/val.pdf
+PythonAPI/.ipynb_checkpoints
+PythonAPI/pycocotools/__pycache__
+*.so
